--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auction19",
+  "name": "auction20",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,36 +11,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
+    "@agm/core": "^1.1.0",
+    "@angular/animations": "^7.2.16",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
+    "@types/socket.io": "^2.1.4",
+    "ansi-styles": "^4.2.1",
+    "bufferutil": "^4.0.1",
+    "chalk": "^4.0.0",
+    "cookie-parser": "^1.4.5",
+    "core-js": "^2.6.11",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
+    "foundation-sites": "^6.6.3",
+    "jquery": "^3.4.0",
+    "load-json-file": "^6.2.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.9.10",
+    "morgan": "^1.10.0",
+    "ngx-socket-io": "^2.1.1",
+    "node-sass": "^4.13.1",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
+    "socketio-jwt": "^4.5.0",
+    "supports-color": "^7.1.0",
+    "tslib": "^1.11.1",
+    "utf-8-validate": "^5.0.2",
+    "what-input": "^5.2.7",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.13.10",
+    "@angular/cli": "^7.3.10",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
